--- a/openapi/components/schemas/relatedGuestFieldsInput.yaml
+++ b/openapi/components/schemas/relatedGuestFieldsInput.yaml
@@ -32,5 +32,6 @@ properties:
     type: array
     items:
       type: string
+      format: date
       description: Must be before the date the request is received, and after 1753-01-01
       example: [ "1980-01-01" ]
