--- a/openapi/components/schemas/createEClubAndRegister.yaml
+++ b/openapi/components/schemas/createEClubAndRegister.yaml
@@ -1,4 +1,5 @@
 # Inherits from createAndRegister.yaml, add or override properties in future as needed
-allOf:
-- $ref: './createAndRegister.yaml'
-- type: object
+CreateAndRegisterEClub:
+  allOf:
+  - $ref: './createAndRegister.yaml'
+  - type: object
