--- a/openapi/components/schemas/createEClubAndRegisterResponse.yaml
+++ b/openapi/components/schemas/createEClubAndRegisterResponse.yaml
@@ -1,5 +1,5 @@
 description: |
-  Response information from a create and register call.
+  Response information from a create EClub and register call.
 oneOf:
 - $ref: 'createAndRegisterCardCreatedSuccess.yaml'
 - $ref: 'createAndRegisterUniquenessConflict.yaml'
